# ed2-exerc

./: README.md
dcc012b-lab01-arquivos-wrathg-main/siga.cc/: CMakeCache.txt
dcc012b-lab01-arquivos-wrathg-main/src/: estudante.cc  estudante.h  siga.cc
dcc012b-lab01-arquivos-wrathg-main/tests/: test1.cc
dcc012b-lab02-sort-wrathg-main/siga/include/: sort.h
dcc012b-lab02-sort-wrathg-main/siga/src/: estudante.cc  siga.cc
dcc012b-lab03-sort-nicolassoam-main/: README.md
dcc012b-lab03-sort-nicolassoam-main/siga/include/: sort.h
dcc012b-lab03-sort-nicolassoam-main/siga/src/: estudante.cc  siga.cc
dcc012b-lab04-heap-nicolassoam-main/: CMakeLists.txt  README.md
dcc012b-lab04-heap-nicolassoam-main/siga/include/: config.h  estudante.h  leftist_heap.h  leftist_heap_node.h  siga.h  sort.h
dcc012b-lab04-heap-nicolassoam-main/siga/src/: estudante.cc  siga.cc
dcc012b-lab04-heap-nicolassoam-main/tests/: test1.cc  test2.cc  test3.cc  test4.cc  test5.cc  test6.cc
dcc012b-lab04-heap-nicolassoam-main/tests/input/: alunosB.csv
dcc012b-lab05-nicolassoam-master/: CMakeLists.txt  README.md  REPORT.md
dcc012b-lab05-nicolassoam-master/input/: alunos.csv
dcc012b-lab05-nicolassoam-master/siga/include/: config.h  hash.h  leftist_heap.h  leftist_heap_node.h  metrics.h
dcc012b-lab07-splay-nicolassoam-main/: CMakeLists.txt  README.md  main.cpp  splay.cpp  splay.h  splay.md
dcc012b-lab08-rbtree-nicolassoam-master/: CMakeLists.txt  README.md  config.h.in
dcc012b-lab08-rbtree-nicolassoam-master/librb/: CMakeLists.txt  config.h  redblack.cpp  redblack.h
dcc012b-lab08-rbtree-nicolassoam-master/tests/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp
dcc012b-lab08-rbtree-nicolassoam-master/tests/expected/: test1.out  test2.out  test3.out
dcc012b-lab09-btree-nicolassoam-master/: CMakeLists.txt  README.md  btree.h  main.cpp
dcc012b-lab10-bitstream-master/: bitstream.cpp
